// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MongoConnection should persist 1`] = `
MongoInMemoryCollection {
  "collection": Object {
    "data": Array [
      Object {
        "data": Object {
          "arr": Array [],
          "bool": true,
          "number": 123,
          "string": "string",
        },
        "group": "1",
        "id": "1",
        "version": 0,
      },
      Object {
        "data": Object {
          "arr": Array [],
          "bool": true,
          "number": 123,
          "string": "string",
        },
        "group": "1",
        "id": "2",
        "version": 0,
      },
      Object {
        "data": Object {
          "arr": Array [],
          "bool": true,
          "number": 123,
          "string": "string",
        },
        "group": "2",
        "id": "3",
        "version": 0,
      },
    ],
    "indices": Array [
      Object {
        "index": Object {
          "index": true,
        },
        "options": Object {
          "options": true,
        },
      },
    ],
  },
}
`;

exports[`MongoConnection should persist 2`] = `
MongoInMemoryCollection {
  "collection": Object {
    "data": Array [
      Object {
        "data": Object {
          "arr": Array [],
          "bool": true,
          "number": 123,
          "string": "string",
        },
        "group": "1",
        "id": "1",
        "version": 0,
      },
      Object {
        "data": Object {
          "arr": Array [],
          "bool": true,
          "number": 123,
          "string": "string",
        },
        "group": "2",
        "id": "3",
        "version": 0,
      },
      Object {
        "data": Object {
          "arr": Array [],
          "bool": true,
        },
        "group": "1",
        "id": "2",
        "version": 1,
      },
    ],
    "indices": Array [
      Object {
        "index": Object {
          "index": true,
        },
        "options": Object {
          "options": true,
        },
      },
    ],
  },
}
`;

exports[`MongoConnection should persist 3`] = `
Object {
  "data": Object {
    "arr": Array [],
    "bool": true,
    "number": 123,
    "string": "string",
  },
  "group": "1",
  "id": "1",
  "version": 0,
}
`;

exports[`MongoConnection should persist 4`] = `
MongoInMemoryCursor {
  "data": Array [
    Object {
      "data": Object {
        "arr": Array [],
        "bool": true,
        "number": 123,
        "string": "string",
      },
      "group": "1",
      "id": "1",
      "version": 0,
    },
    Object {
      "data": Object {
        "arr": Array [],
        "bool": true,
      },
      "group": "1",
      "id": "2",
      "version": 1,
    },
  ],
}
`;

exports[`MongoConnection should persist 5`] = `
Object {
  "dbName": Object {
    "coName": Object {
      "data": Array [
        Object {
          "data": Object {
            "arr": Array [],
            "bool": true,
            "number": 123,
            "string": "string",
          },
          "group": "2",
          "id": "3",
          "version": 0,
        },
        Object {
          "data": Object {
            "arr": Array [],
            "bool": true,
          },
          "group": "1",
          "id": "2",
          "version": 1,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "index": true,
          },
          "options": Object {
            "options": true,
          },
        },
      ],
    },
  },
  "initialized": true,
}
`;

exports[`MongoConnection should persist 6`] = `
Object {
  "dbName": Object {
    "coName": Object {
      "data": Array [
        Object {
          "data": Object {
            "arr": Array [],
            "bool": true,
            "number": 123,
            "string": "string",
          },
          "group": "2",
          "id": "3",
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "index": true,
          },
          "options": Object {
            "options": true,
          },
        },
      ],
    },
  },
  "initialized": true,
}
`;

exports[`MongoConnection should persist 7`] = `
MongoInMemoryDatabase {
  "database": Object {
    "coName": Object {
      "data": Array [
        Object {
          "data": Object {
            "arr": Array [],
            "bool": true,
            "number": 123,
            "string": "string",
          },
          "group": "2",
          "id": "3",
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "index": true,
          },
          "options": Object {
            "options": true,
          },
        },
      ],
    },
  },
  "databaseName": "dbName",
}
`;

exports[`MongoConnection should persist 8`] = `
MongoInMemoryDatabase {
  "database": Object {
    "coName": Object {
      "data": Array [
        Object {
          "data": Object {
            "arr": Array [],
            "bool": true,
            "number": 123,
            "string": "string",
          },
          "group": "2",
          "id": "3",
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "index": true,
          },
          "options": Object {
            "options": true,
          },
        },
      ],
    },
  },
  "databaseName": "dbName",
}
`;

exports[`MongoConnection should persist 9`] = `
Object {
  "dbName": Object {
    "coName": Object {
      "data": Array [
        Object {
          "data": Object {
            "arr": Array [],
            "bool": true,
            "number": 123,
            "string": "string",
          },
          "group": "2",
          "id": "3",
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "index": true,
          },
          "options": Object {
            "options": true,
          },
        },
      ],
    },
  },
  "initialized": true,
}
`;
